fix : dark mode light mode problem

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,1 +1,40 @@
 @import "tailwindcss";
+:root {
+  --gradient-light: linear-gradient(180deg, #ebf2fc 0%, #eef8f9 100%);
+  --gradient-dark: linear-gradient(180deg, #040918 0%, #091540 100%);
+}
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --font-noto: "Noto Sans", sans-serif;
+  /* Layout widths */
+  --layout-mobile-width: 375px;
+  --layout-desktop-width: 1440px;
+
+  /* Neutral colors */
+  --neutral-900: hsl(227, 75%, 14%);
+  --neutral-800: hsl(224, 26%, 16%);
+  --neutral-800: hsl(224, 26%, 16%);
+  --neutral-700: hsl(225, 23%, 24%);
+  --neutral-600: hsl(226, 11%, 37%);
+  --neutral-300: hsl(0, 0%, 78%);
+  --neutral-200: hsl(217, 61%, 90%);
+  --neutral-100: hsl(0, 0%, 93%);
+  --neutral-0: hsl(200, 60%, 99%);
+
+  /* Red colors */
+  --red-400: hsl(3, 86%, 64%);
+  --red-500: hsl(3, 71%, 56%);
+  --red-700: hsl(3, 77%, 44%);
+
+  /* Gradients */
+  --gradient-light: linear-gradient(180deg, #ebf2fc 0%, #eef8f9 100%);
+  --gradient-dark: linear-gradient(180deg, #040918 0%, #091540 100%);
+
+  /* Typography */
+  --font-family-body: "Noto Sans", sans-serif;
+  --font-size-body: 16px;
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
+}
